archive/parser/tests/snapshots/statements/valid/lseg@11.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "INSERT INTO LSEG_TBL VALUES ('[1,2,3, 4');"
---
Parse {
    cst: SourceFile@0..42
      InsertStmt@0..42
        Insert@0..6 "INSERT"
        Whitespace@6..7 " "
        Into@7..11 "INTO"
        Whitespace@11..12 " "
        RangeVar@12..20
          Ident@12..20 "LSEG_TBL"
        Whitespace@20..21 " "
        SelectStmt@21..40
          Values@21..27 "VALUES"
          Whitespace@27..28 " "
          Ascii40@28..29 "("
          List@29..40
            AConst@29..40
              Sconst@29..40 "'[1,2,3, 4'"
        Ascii41@40..41 ")"
        Ascii59@41..42 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: InsertStmt(
                InsertStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "lseg_tbl",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 12,
                        },
                    ),
                    cols: [],
                    select_stmt: Some(
                        Node {
                            node: Some(
                                SelectStmt(
                                    SelectStmt {
                                        distinct_clause: [],
                                        into_clause: None,
                                        target_list: [],
                                        from_clause: [],
                                        where_clause: None,
                                        group_clause: [],
                                        group_distinct: false,
                                        having_clause: None,
                                        window_clause: [],
                                        values_lists: [
                                            Node {
                                                node: Some(
                                                    List(
                                                        List {
                                                            items: [
                                                                Node {
                                                                    node: Some(
                                                                        AConst(
                                                                            AConst {
                                                                                isnull: false,
                                                                                location: 29,
                                                                                val: Some(
                                                                                    Sval(
                                                                                        String {
                                                                                            sval: "[1,2,3, 4",
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        sort_clause: [],
                                        limit_offset: None,
                                        limit_count: None,
                                        limit_option: Default,
                                        locking_clause: [],
                                        with_clause: None,
                                        op: SetopNone,
                                        all: false,
                                        larg: None,
                                        rarg: None,
                                    },
                                ),
                            ),
                        },
                    ),
                    on_conflict_clause: None,
                    returning_list: [],
                    with_clause: None,
                    r#override: OverridingNotSet,
                },
            ),
            range: 0..41,
        },
    ],
}
